<resources>
    <string name="app_name">Trips Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">submit</string>
    <string name="_25th_march_2022">25th march 2022</string>
    <string name="click_here_to_select_trip_date">Click here to select Trip Date</string>
    <string name="requires_risk_assesment">Requires Risk Assesment</string>
    <string name="save">Save</string>
    <string name="enter_trip_name">Enter Trip Name</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="trip_description">Trip Description</string>
    <string name="add">Add</string>
    <string name="enter_additional_comments">Enter additional comments</string>
    <string name="enter_amount_of_expense">Enter amount of expense</string>
    <string name="click_to_add_trip_expense">Click to add trip expense date</string>

    <string-array name="spinner_items">
        <item>Travel</item>
        <item>Food</item>
        <item>Other</item>
    </string-array>

</resources>